[package]
name = "lurk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81" }
bytes = { version = "1.6.0" }
clap = { version = "4.5.3", features = ["derive"] }
cfg-if = { version = "1.0" }
futures = { version = "0.3.30" }
httptest = { version = "0.15.5" }
log = { version =  "0.4.21" }
log4rs = { version = "1.3.0" }
log4rs_test_utils = { version = "0.2.3" }
mockall = { version = "0.12.1" }
pretty_assertions = { version = "1.4.0" }
reqwest = { version = "0.12.2", features = ["socks"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tokio-test = { version = "0.4.4" }
thiserror = { version = "1.0.58" }