[package]
name = "lurk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
futures = { version = "0.3.30" }
httptest = { version = "0.15.5" }
log4rs_test_utils = { version = "0.2.3" }
pretty_assertions = { version = "1.4.0" }
reqwest = { version = "0.12.2", features = ["socks"] }
tokio-test = { version = "0.4.4" }
async-socks5 = { version = "0.6.0" }
rand = { version = "0.8.5" }

[dependencies]
anyhow = { version = "1.0.81" }
async-listen = { version = "0.2.1" }
async-trait = { version = "*" }
bytes = { version = "1.6.0" }
clap = { version = "4.5.3", features = ["derive"] }
cfg-if = { version = "1.0" }
chrono = { version = "^0.4", features = ["serde"]}
human_bytes = { version = "0.4.3" }
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
serde_with = { version = "^3.9", features = ["chrono_0_4"]}
http-body-util = { version = "0.1.2" }
log = { version = "0.4.21" }
log4rs = { version = "1.3.0" }
socket2 = { version = "0.5.6" }
tokio-stream = { version = "0.1.15", features = ["net"] }
tokio-util ={ version = "*" }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
  "time",
  "signal"
] }
thiserror = { version = "1.0.58" }
